--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: npm run test
+        run: npm install && npm run test
 
       # Runs a set of commands using the runners shell
 #       - name: Run a multi-line script
